--- a/slow_repqs.lyx
+++ b/slow_repqs.lyx
@@ -81,6 +81,10 @@ Introduction
 \end_layout
 
 \begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
 Основной функциональной единицей всех живых организмов является клетка.
  Бактерии или дрожжи состоят лиш из одной клетки, в то время как млекопитающие
  являют собой совокупность миллионов живых клеток, коллективная работа которых
@@ -94,7 +98,7 @@ Introduction
  генетическую сеть - логическую основу клетки.
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 Генетическая сеть живой клетки состоит из десятков тысяч генов
 \begin_inset CommandInset citation
 LatexCommand cite
@@ -130,7 +134,7 @@ key "reinitz1990theoretical,ptashne1986genetic"
  
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 Совокупность взаимодействующих генов, находящихся внутри живой клетки трудно
  изучать из-за воздействия на них многочисленных факторов, поэтому, чтобы
  понять принцип действия и динамическое поведение генов проще сконструировать
@@ -169,7 +173,7 @@ key "hasty2002engineered"
 .
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 В многоклеточном организме или колонии бактерий важную роль играет коллективная
  работа совокупности клеток.
  Межклеточное взаимодействие в живых организмах обычно основано на метоболитах
@@ -199,7 +203,274 @@ key "michael2001sdia,ahmer2004cell"
  Quorum sensing используется бактериям для контроля плотности популяции
  - при достижении критической концентрации аутоиндуктора клетки в колонии
  перестают делится.
+ Quorum sensig используется учёными и при изучении искусственных генетических
+ сетей, например для синхронизации генетических осцилляторов
+\begin_inset CommandInset citation
+LatexCommand cite
+key "danino2010synchronized"
+
+\end_inset
+
+.
  
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Искусственные генетические сети представляют большой интерес для исследователей
+ в настоящее время.
+ Их изучение связано как с желанием управлять природой, так и понять её
+ законы
+\begin_inset CommandInset citation
+LatexCommand cite
+key "elowitz2010build"
+
+\end_inset
+
+.
+ За последние 20 лет были изучены in vivo генетические аналоги электронного
+ триггера
+\begin_inset CommandInset citation
+LatexCommand cite
+key "gardner2000construction"
+
+\end_inset
+
+, генетические осцилляторы
+\begin_inset CommandInset citation
+LatexCommand cite
+key "elowitz2000synthetic,stricker2008fast"
+
+\end_inset
+
+ а так же предложены схемы генетических бинарных операторов и сумматоров
+\begin_inset CommandInset citation
+LatexCommand cite
+key "hasty2002engineered"
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Standard
+
+\color black
+Динамика живой клетки в первом приближении представляет собой гармонические
+ колебания.
+ За один период таких колебаний клетка расёт, питается и делится.
+ 
+\color inherit
+Решение задачи управления размножением бактерий или роста раковых клеток
+ приводит к необходимости изучения осциляторного поведения генетических
+ сетей.
+ Первой искуссвенной генетической сетью, продемонстрировавшей колебательно
+ поведение стал репрессилятор
+\begin_inset CommandInset citation
+LatexCommand cite
+key "elowitz2000synthetic"
+
+\end_inset
+
+.
+ Репрессилятор состоит как минимум из трёх элементов - генов и их промоторов,
+ белковые продукты каждого из которых однонаправленно ингибируют транскрипцию
+ соседнего гена
+\begin_inset CommandInset citation
+LatexCommand cite
+key "muller2006generalized"
+
+\end_inset
+
+.
+ Обозначим эти элементы 
+\series bold
+a
+\series default
+, 
+\series bold
+b
+\series default
+ и 
+\series bold
+c
+\series default
+, тогда топология сети устроена следующим образом: ген 
+\series bold
+a
+\series default
+ кодирует белок, подавляющий транскрипцию с гена 
+\series bold
+b
+\series default
+, белковый продукт гена 
+\series bold
+b
+\series default
+ подавляет транскрипцию гена 
+\series bold
+c
+\series default
+, и белковый продукт гена 
+\series bold
+c
+\series default
+, замыкая цикл, подавляет транскрипцию с гена 
+\series bold
+a
+\series default
+.
+ Проще всего понять динамику репрессилятора можно представив его в виде
+ логической схемы, считая что каждый ген может находится в трёх состояниях:
+ ген полностью ингибирован; ген свободен; ген свободен и ингибирует своего
+ соседа.
+ Положим в начале 
+\series bold
+a
+\series default
+ ингибирует 
+\series bold
+b
+\series default
+, тогда ген 
+\series bold
+c
+\series default
+ свободен.
+ На следующем шаге ген 
+\series bold
+c 
+\series default
+ингибирует 
+\series bold
+a
+\series default
+ и свободен ген 
+\series bold
+b 
+\series default
+и тд.
+\end_layout
+
+\begin_layout Standard
+На настоящий момент существует довольно много попыток реализации модели
+ репрессилятора in vivo
+\begin_inset CommandInset citation
+LatexCommand cite
+key "potvin2016synchronous,chandraseelan2013effects"
+
+\end_inset
+
+ однако не все из них успешные[ссылка].
+ Отдельной важной задачей при построении любой искусственной генечической
+ сети и репрессилятора в частности является управление её динамикой.
+ Однин из простейших вариантов - изменение температуры внешней среды
+\begin_inset CommandInset citation
+LatexCommand cite
+key "chandraseelan2013effects"
+
+\end_inset
+
+ или химическое воздействие.
+ Однако в таком случае воздействию так же подвергается и живой организм,
+ содержащий синтетическую сеть.
+ Более точным и устойчивым методом контроля динамики искусственной генетической
+ сети может быть добавление обратной связи, которая в качестве звена содержит
+ какой-либо метаболит.
+ Такая обратная связь должна изменять динамику системы лишь при наличии
+ внешнего контроля метаболита а в свободном положении качественно не менять
+ динамику системы.
+ Примером такой обратной связи является кворум сенсинг.
+ Кворум сенсинг основан на двух генах: первый ген при помощи своего белкогого
+ продукта синтезирует small molecul named autoinducer; второй - синтезирует
+ рецептор, который связывается с аутоиндуктором и затем воздействует на
+ промотор третьего гена.
+ Autoinducer может свободно диффундировать сквозь клеточную мембрану во
+ внешнюю среду и обратно.
+ Описанное межклеточное взаимодействие впервые было обнаружено в биолюменисцентн
+ых бактериях
+\begin_inset CommandInset citation
+LatexCommand cite
+key "nealson1970cellular"
+
+\end_inset
+
+ и встречается так же в кишечной палочке и других бактериях
+\begin_inset CommandInset citation
+LatexCommand cite
+key "michael2001sdia,ahmer2004cell"
+
+\end_inset
+
+.
+ На настоящий момент существует ряд работ, в которых кворум сенсинг был
+ применён для синхронизации репрессиляторов в колонии бактерий[ссылка].
+\end_layout
+
+\begin_layout Standard
+Не смотря на простоту системы репрессилятора проведение эксперимента in
+ vivo осложнено тем фактом что характерный период колебаний и меет порядок
+ нескольких часов, поэтому для того чтобы отличить автоколебания от затухающих
+ требуется время порядка нескольких суток.
+ Кроме того в проведённых на данный момент экспериментах не все копии репрессиля
+тора показывали хоть какое то наличие колебаний.
+ Перечисленные проблемы помогает решить математическое моделирование.
+ 
+\end_layout
+
+\begin_layout Standard
+Основной известной моделью репрессилятора явлеятся система из 6 ОДУ, три
+ из которых описывают динамику концентраций мРНК и три - динамику белков[ссылки].
+ Такая система получается из записи полной модели (основанной на законе
+ действующих масс и описывающей концентрации мРНК, белков, транскрипционных
+ факторов и свободных генов) с последующей редукцией уравнений для быстрых
+ переменных(транскрипционных факторов-димеров и генов, свободных от воздействия
+ ТФ).
+ Однако в работе 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "bennett2007transient"
+
+\end_inset
+
+ показаны отличия между полной и редуцированной моделями выражающиеся в
+ существенном различие амплитуд и периодов колебаний.
+ Кроме того в работе
+\begin_inset CommandInset citation
+LatexCommand cite
+key "potapov2015multi"
+
+\end_inset
+
+ показано, что в полной модели репрессилятора возможна субкритическая HB,
+ что может объяснять вышеупомянутые проблемы с запуском репрессилятора при
+ проведении эксперимента.
+ На моделях с редукцией быстрых переменных рассмотрены варианты репрессилятора
+ с добавленой обратной связью
+\begin_inset CommandInset citation
+LatexCommand cite
+key "potapov2011dynamics,potapov2012quorum"
+
+\end_inset
+
+, а так же репрессиляторы, связанные при помощи механизма кворум сенсинга.
+\end_layout
+
+\begin_layout Standard
+В настоящей работе сосредоточено внимание на изучение полной модели репрессилято
+ра с обратной связью и на возможностях управления репрессилятором при помощи
+ изменеии концентрации аутоиндуктора во внешней среде.
+ Продемонстрирован переход от колебаний к стационарному режиму при увеличении
+ концентрации аутоиндуктора во внешней среде.
 \end_layout
 
 \begin_layout Section
@@ -1610,7 +1881,7 @@ Discussion
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "slow_repqs"
-options "plain"
+options "ieeetr"
 
 \end_inset
 
