--- a/slow_repqs.bib
+++ b/slow_repqs.bib
@@ -114,3 +114,91 @@
   year={2001},
   publisher={Am Soc Microbiol}
 }
+
+@article{danino2010synchronized,
+  title={A synchronized quorum of genetic clocks},
+  author={Danino, Tal and Mondrag{\'o}n-Palomino, Octavio and Tsimring, Lev and Hasty, Jeff},
+  journal={Nature},
+  volume={463},
+  number={7279},
+  pages={326--330},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{muller2006generalized,
+  title={A generalized model of the repressilator},
+  author={M{\"u}ller, Stefan and Hofbauer, Josef and Endler, Lukas and Flamm, Christoph and Widder, Stefanie and Schuster, Peter},
+  journal={Journal of mathematical biology},
+  volume={53},
+  number={6},
+  pages={905--937},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{chandraseelan2013effects,
+  title={Effects of temperature on the dynamics of the LacI-TetR-CI repressilator},
+  author={Chandraseelan, Jerome G and Oliveira, Samuel MD and H{\"a}kkinen, Antti and Tran, Huy and Potapov, Ilya and Sala, Adrien and Kandhavelu, Meenakshisundaram and Ribeiro, Andre S},
+  journal={Molecular BioSystems},
+  volume={9},
+  number={12},
+  pages={3117--3123},
+  year={2013},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{potvin2016synchronous,
+  title={Synchronous long-term oscillations in a synthetic gene circuit},
+  author={Potvin-Trottier, Laurent and Lord, Nathan D and Vinnicombe, Glenn and Paulsson, Johan},
+  journal={Nature},
+  volume={538},
+  number={7626},
+  pages={514--517},
+  year={2016},
+  publisher={Nature Research}
+}
+
+@article{bennett2007transient,
+  title={Transient dynamics of genetic regulatory networks},
+  author={Bennett, Matthew R and Volfson, Dmitri and Tsimring, Lev and Hasty, Jeff},
+  journal={Biophysical journal},
+  volume={92},
+  number={10},
+  pages={3501--3512},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{potapov2015multi,
+  title={Multi-stable dynamics of the non-adiabatic repressilator},
+  author={Potapov, Ilya and Zhurov, Boris and Volkov, Evgeny},
+  journal={Journal of The Royal Society Interface},
+  volume={12},
+  number={104},
+  pages={20141315},
+  year={2015},
+  publisher={The Royal Society}
+}
+
+@article{potapov2012quorum,
+  title={“Quorum sensing” generated multistability and chaos in a synthetic genetic oscillator},
+  author={Potapov, I and Zhurov, B and Volkov, E},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={22},
+  number={2},
+  pages={023117},
+  year={2012},
+  publisher={AIP}
+}
+
+@article{potapov2011dynamics,
+  title={Dynamics of coupled repressilators: The role of mRNA kinetics and Transcription cooperativity},
+  author={Potapov, I and Volkov, E and Kuznetsov, A},
+  journal={Physical Review E},
+  volume={83},
+  number={3},
+  pages={031901},
+  year={2011},
+  publisher={APS}
+}
