--- a/slow_repqs.lyx
+++ b/slow_repqs.lyx
@@ -422,7 +422,7 @@ key "michael2001sdia,ahmer2004cell"
  нескольких часов, поэтому для того чтобы отличить автоколебания от затухающих
  требуется время порядка нескольких суток.
  Кроме того в проведённых на данный момент экспериментах не все копии репрессиля
-тора показывали хоть какое то наличие колебаний.
+тора показывали хоть какое-то наличие колебаний.
  Перечисленные проблемы помогает решить математическое моделирование.
  
 \end_layout
